@@ -1,0 +1,4 @@
+{
+    switch ($1) { case "A" : arr[1] = $1 }
+    print "value: " arr[1]
+}
