@@ -1,0 +1,1 @@
+{ if ($1) print "must print " $1 }
