@@ -1,0 +1,3 @@
+must print +
+must print -
+must print 1
