@@ -1,3 +1,9 @@
+2020-07-05         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (EXTRA_DIST): New tests, mpfrcase, mpfrnonum.
+	* mpfrcase.awk, mpfrcase.in, mpfrcase.ok,
+	mpfrnonum.awk, mpfrnonum.in, mpfrnonum.ok: New files.
+
 2020-07-02         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (EXTRA_DIST): New test, posix_compare.
